# mcp-server-task-assistant

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: cursor.json  vscode-copilot.json  vscode-copilot.json.template
docs/: architecture.md  configuration.md  development.md  prompts-reference.md  resources-reference.md  rest-api.md  tools-reference.md  vscode-integration.md
scripts/: setup.sh
src/mcp_assistant/: api_server.py  config.py  logging_config.py  server.py  utils.py
src/mcp_assistant/api/: app.py
src/mcp_assistant/api/auth/: config.py  dependencies.py  router.py
src/mcp_assistant/api/models/: artifacts.py  auth.py  common.py  resources.py  workflow.py
src/mcp_assistant/api/v1/: artifacts.py  resources.py  router.py  workflow.py
src/mcp_assistant/prompts/: templates.py
src/mcp_assistant/resources/: flow.py
src/mcp_assistant/tools/: artifacts.py  elicitation.py  workflow.py
tests/: test_artifacts.py  test_e2e_flow.py  test_logging_config.py  test_prompts.py  test_resources.py  test_security.py  test_server.py  test_tool_signatures.py  test_utils.py  test_workflow.py
tests/api/: conftest.py  test_app.py  test_artifacts.py  test_auth.py  test_ideate_prd.py  test_resources.py  test_workflow.py
tests/tools/: test_elicitation.py
