[project]
name = "mcp-assistant"
version = "0.1.0"
description = "MCP Server for Assistant Flow"
requires-python = ">=3.10"
dependencies = ["fastmcp>=3.1.1"]

[project.scripts]
mcp-assistant = "mcp_assistant.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_assistant"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = ["pytest>=8.0"]
