[project]
name = "mcp-assistant"
version = "1.1.0b1"
description = "MCP Server for Assistant Flow"
requires-python = ">=3.10"
dependencies = ["fastmcp>=3.1.1", "tomli>=2.0; python_version < '3.11'"]

[project.scripts]
mcp-assistant = "mcp_assistant.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_assistant"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.4.0", "black>=24.0.0", "pytest-cov>=5.0", "pytest-asyncio>=1.0"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["mcp_assistant"]

[tool.coverage.run]
source = ["src/mcp_assistant"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80
